# physXAI

./: .coveragerc  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: gh-pages.yml  pytest_coverage.yml  verify_executables.yml  verify_installation.yml
core_functions/evaluation/: metrics.py
core_functions/feature_selection/: recursive_feature_elimination.py
core_functions/models/: models.py
core_functions/models/ann/: ann_design.py
core_functions/models/ann/configs/: ann_model_configs.py
core_functions/models/ann/keras_models/: keras_models.py
core_functions/models/ann/model_construction/: ann_models.py  rbf_models.py  redidual_models.py  rnn_models.py
core_functions/models/ann/pinn/: pinn_loss.py
core_functions/plotting/: plotting.py
core_functions/preprocessing/: constructed.py  preprossesing.py  training_data.py
core_functions/utils/: logging.py
data/bestest_hydronic_heat_pump/: pid_data.csv
docs/api/: models.md
docs/api/models/: keras_models.md
docs/source/: conf.py  index.rst
docs/source/api/: models.rst  modules.rst
docs/src/api/: evaluation.md  feature_selection.md  index.md  plotting.md  preprocessing.md  utils.md
docs/src/api/models/: ann_models.md  configs.md  pinn.md  (+2 more)
executables/agentlib_mpc/one_room_mpc/: T_ann.py
executables/bestest_hydronic_heat_pump/: Dummy_shifting.py  P_hp.py  P_hp_FeatureSelection.py  P_hp_modular.py  P_hp_pinn.py  TAir.py  TAir_FeatureSelection.py  TAir_evaluateMultiStep.py  TAir_pcnn.py  TAir_rnn.py  configuration.py  different_sampling_methods.py
physXAI/: __init__.py
physXAI/agentlib_mpc_plugin/: example.py  example_ci.py
physXAI/evaluation/: metrics.py
physXAI/feature_selection/: recursive_feature_elimination.py
physXAI/models/: __init__.py  models.py
physXAI/models/ann/: ann_design.py
physXAI/models/modular/: constrained_regression.py  modular_ann.py  modular_expression.py
physXAI/plotting/: plotting.py
physXAI/preprocessing/: constructed.py  preprocessing.py  preprossesing.py  sampling.py  training_data.py
physXAI/utils/: logging.py  test_case.py
unittests/: test_coverage.py  verify_installation.py
unittests/modular/: test_modular.py
(+9 files in other folders)
